fix(plugin): capture child InputStream once; List.of command; drop unused import (review)